<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Slider Menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Event Übersicht</item>
        <item>Sucheinstellungen</item>
        <item>Meine Events</item>
        <item>Angemeldete Events</item>
        <item>Einstellungen</item>
        <item>Über</item>
        <item>App Teilen</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="username_textview">Username:</string>
    <string name="password_textview">Password:</string>
    <string name="submit">Submit</string>

    <string name="post_comment">Post Comment</string>
    <string name="read_comments_title">Recent Comments</string>
    <string name="passwords_not_same">Passwords don\'t match</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="FacebookRegisterConfirmation">Do you really want to register with Faceook?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Loading">Loading...</string>
    <string name="WaitWhileLoading">Please wait...</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Okay">Okay</string>
    <string name="Error">Error</string>
    <string name="CanNotConnectToFacebook">Cannot establish a connection to facebook.</string>
    <string name="ConnectingWithFacebook">Connecting with Facebook.</string>
    <string name="app_id">1454202274870035</string>
    <string name="Hint">Hint</string>
    <string name="FacebookLoginWasSuccessful">Facebook Login was successful.</string>
    <string name="FacebookLoginWasNotSuccessful">Facebook Login was NOT successful.</string>
    <string name="StartTitle">Login</string>
    <string name="Logout">Logout</string>
    <string name="ReallyLogout">Do you really want to logout</string>
    <string name="Password">Password</string>
    <string name="PasswordRepeation">Password repeation</string>
    <string name="Username">Username</string>
    <string name="Register">Register</string>
    <string name="PleaseEnterYourUsername">Please enter your username.</string>
    <string name="PleaseEnterYourPassword">Please enter your password.</string>
    <string name="PleaseEnterYourEmailAddress">Please enter your eMail-Address.</string>
    <string name="YourNewPasswordHasToBeAtLeastXCharactersLong">Your new password has to be at least %i characters long.</string>
    <string name="YourPasswordHasToBeAtLeastXCharactersLong">Your password has to be at least %i characters long.</string>
    <string name="ThePasswordRepeatDoesNotMatch">The password and the password repeation does not match.</string>
    <string name="PleaseEnterAValidEmailAddress">Please enter a valid eMail-Address.</string>
    <string name="CanNotRegisterUser">Can not register user.</string>
    <string name="CanNotLoginUser">Can not login user</string>
    <string name="CanNotLoginDueToInvalidCredentials">Can not login user due to invalid credentials.</string>
    <string name="TheUsernameIsAlreadyInUse">The username is alreay in use. Please choose another one.</string>
    <string name="Login">Login</string>
    <string name="RequestNewPassword">Request new password</string>
    <string name="PasswordForgottenIntroduction">You have forgotten your password. No problem. Simply enter either or username or your eMail and we will send you a link to create new password to your eMail-Address.</string>
    <string name="PleaseEnterYourUsernameOrEmailAddress">Please enter your username or eMail-Address.</string>
    <string name="ForgotPassword">Password forgotten</string>
    <string name="ANewPasswordHasBeenSentToYouByEmail">A new password has been sent to you by email.</string>
    <string name="Success">Success</string>
    <string name="CanNotRetrieveNewPassword">Can not retrieve link to create a new password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
